# axion

./: .gitignore  Cargo.toml  README.md
axion/: Cargo.toml
axion-core/axion-db/: Cargo.toml  README.md
axion-core/axion-db/src/: client.rs  config.rs  error.rs  lib.rs  manager.rs  metadata.rs
axion-core/axion-db/src/introspection/: mod.rs  postgres.rs
axion-core/axion-db/src/types/: mod.rs  postgres.rs
axion-core/axion-server/: Cargo.toml
axion/examples/: axion_db_test.rs  axion_health.rs  axion_serialize_schema.rs  basic_impl.rs  main_tester.rs  prismatic_health.rs  server_simple.rs  simple_request.rs
axion/src/: lib.rs
axion/src/api/: health.rs  mod.rs  prism.rs
prismatic/: Cargo.toml
prismatic/examples/: basic_impl.rs  main_tester.rs  server_simple.rs
prismatic/src/: lib.rs
resources/: attributions.md  index.html
