# prismatic/Cargo.toml (Main workspace manifest)

[workspace]
members = [
    "prismatic",
    "core/prismatic-core",
    "core/prismatic-db",
    "core/prismatic-server",
    "prismatic-macros"
]
resolver = "2"

# COMPILE OPTIMIZATION ------------------------------------------------------------------------
[profile.dev]
opt-level = 0  # no optimizations (fastest compile time, slowest runtime)

[profile.dev.package."*"]
opt-level = 3  # Optimize the dependencies at the highest level
# Slower first build, but faster subsequent builds

[profile.release]
opt-level = 3  # full optimizations (slowest compile time, fastest runtime)
lto = true     # link-time optimizations (slower compile time, faster runtime)

# WORKSPACE DEPENDENCIES ---------------------------------------------------------------------
# These versions will be used by all crates in the workspace unless overridden
[workspace.dependencies]

# Web framework and HTTP utilities
axum = "0.8.3"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }

# Async utilities
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
futures = "0.3.31"

# Database connectivity
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "time", "uuid", "json"] }

# Serialization and data handling
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Date/time utilities
chrono = { version = "0.4.40", features = ["serde"] }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Proc macro utilities (for the macros crate)
syn = "2.0.100"
quote = "1.0.40"
proc-macro2 = "1.0.94"

# Testing utilities
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"

dev_utils = "0.1.1"
