# axion/Cargo.toml (Main workspace manifest)

[workspace]
members = [
    "axion",
    # "axion-core/axion-db",
    # "axion-core/axion-server",
    # "axion-macros"
]
resolver = "2"
exclude = [
    ".github",
    "axion-core/*",
    "axion-macros/*",
]

# ignore some of the directories...


# COMPILE OPTIMIZATION ... (keep existing settings) ...

# WORKSPACE DEPENDENCIES ---------------------------------------------------------------------
[workspace.dependencies]

# Internal crates
axion-db = { workspace = true }
axion-server = { workspace = true }
# axion-macros = { workspace = true } # Keep optional if it's a feature

# Web framework and HTTP utilities
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors", "trace", "fs"] }

# Async utilities
hyper = { version = "1.6.0", features = ["full"] } # Keep "full" or ensure "http1", "client" are enabled

# Add "client-legacy" feature for HttpConnector used in the example
hyper-util = { version = "0.1.13", features = ["http1", "http2", "client", "client-legacy", "tokio"] } # Add client-legacy and tokio

tokio = { version = "1.45.1", features = ["full"] } # "full" is fine for the example
async-trait = "0.1.88"
futures = "0.3.31"

# Database connectivity
sqlx = { version = "0.8.6", features = ["any", "runtime-tokio-rustls", "postgres", "macros", "json", "uuid", "chrono", "time", "rust_decimal", "bigdecimal", "ipnetwork", "ipnet", "mac_address"] }

# Serialization and data handling
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Date/time utilities
chrono = { version = "0.4.41", features = ["serde"] }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Proc macro utilities (for the macros crate)
syn = "2.0.101"
quote = "1.0.40"
proc-macro2 = "1.0.95"

# Testing utilities
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"

reqwest = { version = "0.12.16", features = ["json"] } # For testing, if needed

# Bytes & Dev Utils (Already present)
bytes = { version = "1.10.1" } # Version looks slightly different from axion/Cargo.toml, workspace takes precedence
dev_utils = "0.1.1" # Make sure this path/version is correct

# --> ADD THESE FOR THE EXAMPLE <--
http-body-util = "0.1.3" # Or latest 0.1.x version
rustls = { version = "0.23.27"}
hyper-rustls = { version = "0.27.6", features = ["rustls-native-certs"] } # Or latest 0.26.x version
