[package]
name = "axion"
version = { workspace = true }
edition = "2024"
description = "Automatic API generator that creates a REST API mirror of a database in Rust"
authors = ["Yrrrrrf"]
repository = "https://github.com/Yrrrrrf/axion"
license = "MIT"
readme = "../README.md"
keywords = ["api", "rest", "database", "axum", "sqlx"]
categories = ["web-programming", "database", "development-tools"]

# exclude = [
#     "resources/",  # some svg, logs and other resources
# ]

# # FEATURES -----------------------------------------------------------------------------------
# [features]
# default = ["postgres", "axum-server"]
# postgres = ["axion-db/postgres"]
# mysql = ["axion-db/mysql"]
# sqlite = ["axion-db/sqlite"]
# axum-server = []
# full = ["postgres", "mysql", "sqlite"]

# DEPENDENCIES ------------------------------------------------------------------------------
[dependencies]
# Internal crates
axion-db = { path = "../axion-core/axion-db", version = "0.0.4" }
# axion-server = { path = "../axion-core/axion-server", version = "0.0.1" }
# axion-macros = { path = "../axion-macros", version = "0.0.1", optional = true }

# External dependencies from workspace (Add the new ones)
dev_utils = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true } # Inherits features from workspace definition now
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
http-body-util = { workspace = true }
hyper-rustls = { workspace = true }
dotenvy = { workspace = true }
# rustls = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }